# hive-send

./: .gitignore  Cargo.toml  README.md
examples/: http_debug.rs
src/: error.rs  lib.rs  types.rs
src/dto/: request.rs  response.rs
src/http/: download_manage.rs  mod.rs
src/http/client/: file_client.rs  mod.rs  status_client.rs  transfer_client.rs
src/http/server/: file_handler.rs  mod.rs  status_handler.rs  transfer_handler.rs
src/utils/: file.rs  file_entropy.rs  gen_id.rs  mod.rs  security.rs
